--- a/src/components/ToDoList/ToDoList.css
+++ b/src/components/ToDoList/ToDoList.css
@@ -31,7 +31,7 @@
 }
 
 .toggle-all+label:before {
-  content: '❯';
+  content: 'вќЇ';
   font-size: 22px;
   color: #e6e6e6;
   padding: 10px 27px 10px 27px;
