--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-@import url('./components/App/App.css');
-@import url('./components/Footer/Footer.css');
-@import url('./components/NewTaskForm/NewTaskForm.css');
-@import url('./components/Task/Task.css');
-@import url('./components/TaskList/TaskList.css');
-@import url('./components/TasksFilter/TaskFilter.css');
+@import url(./components/NewTaskForm/NewTaskForm.css);
+@import url(./components/ToDoList/ToDoList.css);
+@import url(./components/Footer/Footer.css);
+@import url(./components/ToDoFilter/ToDoFilter.css);
