--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,4 @@
 @import url(./components/ToDoList/ToDoList.css);
 @import url(./components/Footer/Footer.css);
 @import url(./components/ToDoFilter/ToDoFilter.css);
+@import url(./components/Task/Task.css);
