--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,7 +2,12 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font:
+    14px 'Helvetica Neue',
+    Helvetica,
+    Arial,
+    sans-serif;
+  line-height: 1.4em;
   line-height: 1.4em;
   background: #f5f5f5;
   color: #111111;
@@ -11,7 +16,7 @@ body {
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-weight: 200;
+
 
 
 }
