--- a/src/components/NewTaskForm/NewTaskForm.css
+++ b/src/components/NewTaskForm/NewTaskForm.css
@@ -1,12 +1,13 @@
 .new-todo {
+
   display: flex;
   justify-content: center;
   margin: 0;
+  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   width: 100%;
   padding: 16px 16px 16px 60px;
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   box-sizing: border-box;
-  font-family: 'Helvetica Neue';
   border: none;
   background-color: white;
   font-style: italic;
@@ -27,5 +28,5 @@ h1 {
   line-height: 1.4em;
   color: #111111;
   font-weight: 200;
-  color: yellow;
+  color: rgba(66, 12, 12, 0.15);
 }
